# virtualtorrentFS

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  mounttorrent.py
docs/: architecture.md
include/: App.hpp  Bencode.hpp  CacheManager.hpp  Config.hpp  DhtClient.hpp  PeerConnection.hpp  PeerProtocol.hpp  PortMapper.hpp  Sha1.hpp  TorrentEngine.hpp  TorrentMetadata.hpp  TorrentSession.hpp  TrackerClient.hpp  VirtualDrive.hpp  WebDavServer.hpp  WebSeedClient.hpp
include/virtualtorrentfs/: ArgumentParser.hpp  CacheManager.hpp  Config.hpp  DokanFilesystem.hpp  LibtorrentSession.hpp  Logger.hpp  ServiceHost.hpp  TorrentIndex.hpp  VirtualDriveManifest.hpp
src/: App.cpp  ArgumentParser.cpp  Bencode.cpp  CacheManager.cpp  Config.cpp  DhtClient.cpp  DokanFilesystem.cpp  LibtorrentSession.cpp  Logger.cpp  PeerConnection.cpp  PeerProtocol.cpp  PortMapper.cpp  ServiceHost.cpp  Sha1.cpp  TorrentEngine.cpp  TorrentIndex.cpp  TorrentMetadata.cpp  TorrentSession.cpp  TrackerClient.cpp  VirtualDrive.cpp  VirtualDriveManifest.cpp  WebDavServer.cpp  WebSeedClient.cpp  main.cpp
